Tryna improve some stuff but making it worse

--- a/index_builder.ipynb
+++ b/index_builder.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
+    "import re\n",
     "import pdfplumber\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.text_splitter import SentenceTransformersTokenTextSplitter\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_pdf_smart(filepath): \n",
+    "    full_text = \"\"\n",
+    "    with pdfplumber.open(filepath) as pdf:\n",
+    "        for page in pdf.pages:\n",
+    "            text = page.extract_text(x_tolerance=1.5, y_tolerance=1.5, layout=True)\n",
+    "            if text:\n",
+    "                full_text += text + \"\\n\"\n",
+    "    return full_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,6 +69,43 @@
     "        chunk_overlap=chunk_overlap\n",
     "    )\n",
     "    return splitter.split_text(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chunk_text_smart(text):\n",
+    "    lines = text.splitlines()\n",
+    "    sections = []\n",
+    "    current_heading = \"\"\n",
+    "    buffer = []\n",
+    "\n",
+    "    for line in lines:\n",
+    "        stripped = line.strip()\n",
+    "        if is_heading(stripped):\n",
+    "            # Save previous section\n",
+    "            if buffer:\n",
+    "                sections.append(current_heading + \"Content: \" + \"\\n\".join(buffer).strip())\n",
+    "                buffer = []\n",
+    "            current_heading = stripped\n",
+    "        else:\n",
+    "            buffer.append(stripped)\n",
+    "\n",
+    "    return sections\n",
+    "\n",
+    "def is_heading(line):\n",
+    "    line = line.strip()\n",
+    "    # Good heuristics for heading lines:\n",
+    "    return (\n",
+    "        len(line) < 100 and (\n",
+    "            re.match(r\"^[A-Z][A-Z\\s]{3,}$\", line) or  # ALL CAPS\n",
+    "            re.match(r\"^[A-Z][a-z]{1,15}(\\s+[A-Z][a-z]{1,15}){0,4}$\", line) or  # Title Case\n",
+    "            re.match(r\"^[a-z]?\\)?\\s?[A-Z].{0,50}$\", line)  # a) Heading Y style\n",
+    "        )\n",
+    "    )"
    ]
   },
   {
@@ -121,6 +175,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: data/catan_knights_3to4p.pdf\n",
+      "✅ Saved 296 chunks to chunks/catan_knights_3to4p.json\n",
+      "Processing: data/catan_barbarians_3to4p.pdf\n",
+      "✅ Saved 254 chunks to chunks/catan_barbarians_3to4p.json\n",
+      "Processing: data/catan_seafarers_3to4p.pdf\n",
+      "✅ Saved 228 chunks to chunks/catan_seafarers_3to4p.json\n",
+      "Processing: data/catan_knights_5to6p.pdf\n",
+      "✅ Saved 25 chunks to chunks/catan_knights_5to6p.json\n",
+      "Processing: data/catan_barbarians_5to6p.pdf\n",
+      "✅ Saved 74 chunks to chunks/catan_barbarians_5to6p.json\n",
+      "Processing: data/catan_pirates_3to4p.pdf\n",
+      "✅ Saved 209 chunks to chunks/catan_pirates_3to4p.json\n",
+      "Processing: data/catan_pirates_5to4p.pdf\n",
+      "✅ Saved 25 chunks to chunks/catan_pirates_5to4p.json\n",
+      "Processing: data/catan_base_5to6p.pdf\n",
+      "✅ Saved 46 chunks to chunks/catan_base_5to6p.json\n",
+      "Processing: data/catan_base_3to4p.pdf\n",
+      "✅ Saved 238 chunks to chunks/catan_base_3to4p.json\n",
+      "Processing: data/catan_seafarers_5to6p.pdf\n",
+      "✅ Saved 53 chunks to chunks/catan_seafarers_5to6p.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Process all PDFs smartly in /data\n",
+    "data_dir = \"data\"\n",
+    "for file in os.listdir(data_dir):\n",
+    "    if file.endswith(\".pdf\"):\n",
+    "        pdf_path = os.path.join(data_dir, file)\n",
+    "        print(f\"Processing: {pdf_path}\")\n",
+    "        text = read_pdf_smart(pdf_path)\n",
+    "        chunks = chunk_text_smart(text)\n",
+    "\n",
+    "        base_filename = os.path.splitext(file)[0] + \".json\"\n",
+    "        save_chunks_to_json(chunks, base_filename)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -129,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,186 +280,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 784 documents.\n"
+      "Loaded 1448 documents.\n",
+      "Split into 1542 token-aware chunks.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ead636206ea430faae73a0f616a02df",
+       "model_id": "eda470fbf3514221baafd9543d416f7a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "modules.json:   0%|          | 0.00/349 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75f895d47bf043e49e40d51f2a896943",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config_sentence_transformers.json:   0%|          | 0.00/116 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99601df14684438782b304f5e79988c4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "README.md:   0%|          | 0.00/10.5k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d06abfcae59c4d189673931c09f927ca",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "sentence_bert_config.json:   0%|          | 0.00/53.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae2a8883673a4fadb4b6fb4716f3854c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/612 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72d2402c691047abb2ea253b0d4a7758",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/90.9M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f8a76f8033a4ded881369342f6e00e7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/350 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95dcd5ddba9246ad90474618a445e608",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89400ed1134045328ea5c8cb12912020",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0593cf5970145d8a890b61ab5c9b64b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/112 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05da59b28c35469b825180e139a46aef",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/190 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Split into 824 token-aware chunks.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "288a3e5e890846f9a4b19c6658770d5d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Batches:   0%|          | 0/26 [00:00<?, ?it/s]"
+       "Batches:   0%|          | 0/49 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -387,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -432,14 +372,14 @@
       "\n",
       "Top 3 results for: \"I have all the necessary resources and it is my turn. Where can I place a city? Anywhere connected to a road, right?\"\n",
       "\n",
-      "Result #1 (Distance: 0.9690)\n",
-      "production, you do not receive any resources or player ’ s metropolis away ), you may place another metropolis commodities, you may take any one resource of your choice gate on one of your cities. but, you may not purchase any from the bank. you many not, however, use this ability when improvements beyond the third level of a given color unless you a “ 7 ” is rolled. have a city where you could build a metropolis. if you do not have such a city on the board, you must wait until you have built at least one more city. illustration l 3 city improvements 88\n",
+      "Result #1 (Distance: 0.9765)\n",
+      "you cannot build a city directly. you can onlycontent : to make the sequence easier to learn for beginners. we upgrade an existing settlement to a city. you pay recommend experienced players ignore this separation. the required resources, return the settlement to after rolling for resource production, you can trade and build your supply, and replace the settlement with a city on the same intersection y. each city is worth 2 victory points. you receive in any order ( you can trade, build, trade again and build again, etc. ). you can even use a harbor on the same turn you build a double resource production ( 2 resource cards ) from the settlement there. using this method speeds up the game a lot. adjacent terrain hexes whenever those numbers are rolled. 66\n",
       "--------------------------------------------------------------------------------\n",
-      "Result #2 (Distance: 1.0133)\n",
-      "player places 1 city and 1 road. ( the first player to – build roads, settlements, cities, place a settlement will be the last to place a city ). beginners should set up knights, city walls, and / or city no city may be placed fewer than 2 hex edges away the game according to improvements. from any city or settlement. the example shown here. – activate, promote, and / or perform • each player receives their first actions with knights. resources when they place their city — – play any number of progress cards. receiving 1 resource for each terrain adjacent to their city. • players place their\n",
+      "Result #2 (Distance: 1.0221)\n",
+      "almanac under “ combined trade / build phase y. ” content : settlements, or cities. only 1 road can be\n",
       "--------------------------------------------------------------------------------\n",
-      "Result #3 (Distance: 1.0321)\n",
-      "own roads. regardless of whose turn it is ( i. e., during any production phase ), when a terrain hex produces resources, you b ) playing development cards y receive 1 resource card for each settlement you have adjacent at any time during your turn, you may play 1 development to that terrain hex. card ( put it face up on the table ). that card, however, may not each settlement is worth 1 victory point. be a card you bought during the same turn ( except for a victory c ) city y requires : 3 ore & 2 grain point card, as described below )! you may only establish a city by knight cards ( purple frame ) y\n",
+      "Result #3 (Distance: 1.0345)\n",
+      "one city improvementcontent : ( abbey, town hall, etc. ) that you build this turn costs one less commodity than usual.\n",
       "--------------------------------------------------------------------------------\n"
      ]
     }
